Started working on mobile sizing. I know that it's not ideal to write this much css in a media query, but I want to make sure this looks good on all screens no matter what. Have to work on the mobile nav then I can probably move on.

--- a/July102018/main.scss
+++ b/July102018/main.scss
@@ -66,4 +66,18 @@ body {
 
 }
 
+//iphone 6, 7, and 8 media queries
+@media only screen 
+and (min-device-width : 375px) 
+and (max-device-width : 667px) { 
+    .logo {
+        visibility: hidden;
+        display: none;
+    }
+    .navList {
+        visibility: hidden;
+        display: none;
+    }
+}
+
 
